# mag

./: CMakeLists.txt  package.xml
include/: mag_component.hpp
include/qrb_ros_mag/: mag_component.hpp  mag_type_adapter.hpp
src/: mag_component.cpp  mag_node.cpp  mag_test.cpp  mag_type_adapter.cpp
test/src/: main.cpp  test.cpp
